Update background CSS.

--- a/index.css
+++ b/index.css
@@ -4,6 +4,7 @@ body {
   background-image: url("./VRChat_2025-03-03_23-34-06.501_4k.jpg");
   background-size: cover;
   background-repeat: no-repeat;
+  background-position: 50% 0%;
   color: #ddd;
   text-shadow: #000 0 0 10px, #000 0 0 10px, #000 0 0 10px;
 }
