--- a/index.css
+++ b/index.css
@@ -1,3 +1,8 @@
+html, body {
+  width: 100%;
+  height: 100%;
+}
+
 body {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   background: linear-gradient(#000, #333);
@@ -7,6 +12,12 @@ body {
   background-position: 50% 0%;
   color: #ddd;
   text-shadow: #000 0 0 10px, #000 0 0 10px, #000 0 0 10px;
+}
+
+@media (orientation: portrait) {
+  body {
+    background-position: 60% 0%;
+  }
 }
 
 .blackcat-about-header {
